--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-bootstrap-icons": "^1.11.4",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.5",
