--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kevinportfolio.github.io/Portfolio-Web",
+  "homepage": "https://zks10.github.io/Portfolio-Web",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
